testData/org/elixir_lang/inspection/unresolvable_type/spec_bare_missing_type_flagged.ex
defmodule SpecBareMissingType do
  @spec convert(<error descr="Type 'a/0' is not defined">a</error>) :: :ok
  def convert(_value), do: :ok
end
